openexr-c/include/imf_header.h

typedef struct Imf_3_0__ChannelList_t_s Imf_3_0__ChannelList_t;
typedef Imf_3_0__ChannelList_t Imf_ChannelList_t;
typedef struct Imath_3_0__Box_Imath_3_0__Vec2_int___t_s Imath_3_0__Box_Imath_3_0__Vec2_int___t;
typedef Imath_3_0__Box_Imath_3_0__Vec2_int___t Imath_Box2i_t;
typedef struct std__string_t_s std__string_t;
typedef std__string_t std_string_t;
typedef struct Imf_3_0__PreviewImage_t_s Imf_3_0__PreviewImage_t;
typedef Imf_3_0__PreviewImage_t Imf_PreviewImage_t;
typedef struct Imath_3_0__Vec2_float__t_s Imath_3_0__Vec2_float__t;
typedef Imath_3_0__Vec2_float__t Imath_V2f_t;
typedef struct Imf_3_0__Attribute_t_s Imf_3_0__Attribute_t;
typedef Imf_3_0__Attribute_t Imf_Attribute_t;
typedef struct Imf_3_0__TileDescription_t_s Imf_3_0__TileDescription_t;
typedef Imf_3_0__TileDescription_t Imf_TileDescription_t;
typedef struct Imf_3_0__OStream_t_s Imf_3_0__OStream_t;
typedef Imf_3_0__OStream_t Imf_OStream_t;
typedef struct Imf_3_0__IStream_t_s Imf_3_0__IStream_t;
typedef Imf_3_0__IStream_t Imf_IStream_t;
typedef struct Imf_3_0__Header_t_s {
    char data[56];
} __attribute__((aligned(8))) Imf_3_0__Header_t;
typedef Imf_3_0__Header_t Imf_Header_t;
typedef struct Imf_3_0__Header__Iterator_t_s {
    char data[8];
} __attribute__((aligned(8))) Imf_3_0__Header__Iterator_t;
typedef Imf_3_0__Header__Iterator_t Imf_Header_Iterator_t;
typedef struct Imf_3_0__Header__ConstIterator_t_s {
    char data[8];
} __attribute__((aligned(8))) Imf_3_0__Header__ConstIterator_t;
typedef Imf_3_0__Header__ConstIterator_t Imf_Header_ConstIterator_t;
unsigned int Imf_3_0__Header_begin_const(
    Imf_Header_t const * this_
    , Imf_Header_ConstIterator_t * return_);
unsigned int Imf_3_0__Header_end(
    Imf_Header_t * this_
    , Imf_Header_Iterator_t * return_);
unsigned int Imf_3_0__Header_end_const(
    Imf_Header_t const * this_
    , Imf_Header_ConstIterator_t * return_);
unsigned int Imf_3_0__Header_find(
    Imf_Header_t * this_
    , Imf_Header_Iterator_t * return_
    , char const * name);
unsigned int Imf_3_0__Header_find_const(
    Imf_Header_t const * this_
    , Imf_Header_ConstIterator_t * return_
    , char const * name);
unsigned int Imf_3_0__Header_displayWindow(
    Imf_Header_t * this_
    , Imath_Box2i_t * * return_);
unsigned int Imf_3_0__Header_displayWindow_const(
    Imf_Header_t const * this_
    , Imath_Box2i_t const * * return_);
unsigned int Imf_3_0__Header_dataWindow(
    Imf_Header_t * this_
    , Imath_Box2i_t * * return_);
unsigned int Imf_3_0__Header_dataWindow_const(
    Imf_Header_t const * this_
    , Imath_Box2i_t const * * return_);
unsigned int Imf_3_0__Header_pixelAspectRatio(
    Imf_Header_t * this_
    , float * * return_);
unsigned int Imf_3_0__Header_pixelAspectRatio_const(
    Imf_Header_t const * this_
    , float const * * return_);
unsigned int Imf_3_0__Header_screenWindowCenter(
    Imf_Header_t * this_
    , Imath_V2f_t * * return_);
unsigned int Imf_3_0__Header_screenWindowCenter_const(
    Imf_Header_t const * this_
    , Imath_V2f_t const * * return_);
unsigned int Imf_3_0__Header_screenWindowWidth(
    Imf_Header_t * this_
    , float * * return_);
unsigned int Imf_3_0__Header_screenWindowWidth_const(
    Imf_Header_t const * this_
    , float const * * return_);
unsigned int Imf_3_0__Header_channels(
    Imf_Header_t * this_
    , Imf_ChannelList_t * * return_);
unsigned int Imf_3_0__Header_channels_const(
    Imf_Header_t const * this_
    , Imf_ChannelList_t const * * return_);
unsigned int Imf_3_0__Header_lineOrder(
    Imf_Header_t * this_
    , Imf_LineOrder * * return_);
unsigned int Imf_3_0__Header_lineOrder_const(
    Imf_Header_t const * this_
    , Imf_LineOrder const * * return_);
unsigned int Imf_3_0__Header_compression(
    Imf_Header_t * this_
    , Imf_Compression * * return_);
unsigned int Imf_3_0__Header_compression_const(
    Imf_Header_t const * this_
    , Imf_Compression const * * return_);
unsigned int Imf_3_0__Header_setName(
    Imf_Header_t * this_
    , std_string_t const * name);
unsigned int Imf_3_0__Header_name(
    Imf_Header_t * this_
    , std_string_t * * return_);
unsigned int Imf_3_0__Header_name_const(
    Imf_Header_t const * this_
    , std_string_t const * * return_);
unsigned int Imf_3_0__Header_hasName(
    Imf_Header_t const * this_
    , _Bool * return_);
unsigned int Imf_3_0__Header_setType(
    Imf_Header_t * this_
    , std_string_t const * Type);
unsigned int Imf_3_0__Header_type(
    Imf_Header_t * this_
    , std_string_t * * return_);
unsigned int Imf_3_0__Header_type_const(
    Imf_Header_t const * this_
    , std_string_t const * * return_);
unsigned int Imf_3_0__Header_hasType(
    Imf_Header_t const * this_
    , _Bool * return_);
unsigned int Imf_3_0__Header_setVersion(
    Imf_Header_t * this_
    , int const version);
unsigned int Imf_3_0__Header_version(
    Imf_Header_t * this_
    , int * * return_);
unsigned int Imf_3_0__Header_version_const(
    Imf_Header_t const * this_
    , int const * * return_);
unsigned int Imf_3_0__Header_hasVersion(
    Imf_Header_t const * this_
    , _Bool * return_);
unsigned int Imf_3_0__Header_setChunkCount(
    Imf_Header_t * this_
    , int chunks);
unsigned int Imf_3_0__Header_hasChunkCount(
    Imf_Header_t const * this_
    , _Bool * return_);
unsigned int Imf_3_0__Header_chunkCount_const(
    Imf_Header_t const * this_
    , int const * * return_);
unsigned int Imf_3_0__Header_setView(
    Imf_Header_t * this_
    , std_string_t const * view);
unsigned int Imf_3_0__Header_hasView(
    Imf_Header_t const * this_
    , _Bool * return_);
unsigned int Imf_3_0__Header_view(
    Imf_Header_t * this_
    , std_string_t * * return_);
unsigned int Imf_3_0__Header_view_const(
    Imf_Header_t const * this_
    , std_string_t const * * return_);
unsigned int Imf_3_0__Header_setTileDescription(
    Imf_Header_t * this_
    , Imf_TileDescription_t const * td);
unsigned int Imf_3_0__Header_tileDescription(
    Imf_Header_t * this_
    , Imf_TileDescription_t * * return_);
unsigned int Imf_3_0__Header_tileDescription_const(
    Imf_Header_t const * this_
    , Imf_TileDescription_t const * * return_);
unsigned int Imf_3_0__Header_hasTileDescription(
    Imf_Header_t const * this_
    , _Bool * return_);
unsigned int Imf_3_0__Header_setPreviewImage(
    Imf_Header_t * this_
    , Imf_PreviewImage_t const * p);
unsigned int Imf_3_0__Header_previewImage(
    Imf_Header_t * this_
    , Imf_PreviewImage_t * * return_);
unsigned int Imf_3_0__Header_previewImage_const(
    Imf_Header_t const * this_
    , Imf_PreviewImage_t const * * return_);
unsigned int Imf_3_0__Header_hasPreviewImage(
    Imf_Header_t const * this_
    , _Bool * return_);
unsigned int Imf_3_0__Header_sanityCheck(
    Imf_Header_t const * this_
    , _Bool isTiled
    , _Bool isMultipartFile);
unsigned int Imf_3_0__Header_setMaxImageSize(
    int maxWidth
    , int maxHeight);
unsigned int Imf_3_0__Header_setMaxTileSize(
    int maxWidth
    , int maxHeight);
unsigned int Imf_3_0__Header_readsNothing(
    Imf_Header_t * this_
    , _Bool * return_);
unsigned int Imf_3_0__Header_writeTo(
    Imf_Header_t const * this_
    , unsigned long * return_
    , Imf_OStream_t * os
    , _Bool isTiled);
unsigned int Imf_3_0__Header_readFrom(
    Imf_Header_t * this_
    , Imf_IStream_t * is
    , int * version);
/** returns the size of this type in bytes */
unsigned int Imf_3_0__Header__Iterator_sizeof();
/** returns the size of this type in bytes */
unsigned int Imf_3_0__Header__Iterator_alignof();
unsigned int Imf_3_0__Header__Iterator_ctor(
    Imf_Header_Iterator_t * this_);
unsigned int Imf_3_0__Header__Iterator_inc(
    Imf_Header_Iterator_t * this_
    , Imf_Header_Iterator_t * * return_);
unsigned int Imf_3_0__Header__Iterator_name(
    Imf_Header_Iterator_t const * this_
    , char const * * return_);
unsigned int Imf_3_0__Header__Iterator_attribute(
    Imf_Header_Iterator_t const * this_
    , Imf_Attribute_t * * return_);
unsigned int Imf_3_0__Header__Iterator_copy(
    Imf_Header_Iterator_t * this_
    , Imf_Header_Iterator_t const * rhs);
unsigned int Imf_3_0__Header__Iterator_move(
    Imf_Header_Iterator_t * this_
    , Imf_Header_Iterator_t * rhs);
/** returns the size of this type in bytes */
unsigned int Imf_3_0__Header__ConstIterator_sizeof();
/** returns the size of this type in bytes */
unsigned int Imf_3_0__Header__ConstIterator_alignof();
unsigned int Imf_3_0__Header__ConstIterator_ctor(
    Imf_Header_ConstIterator_t * this_);
unsigned int Imf_3_0__Header__ConstIterator_from_mut(
    Imf_Header_ConstIterator_t * this_
    , Imf_Header_Iterator_t const * rhs);
unsigned int Imf_3_0__Header__ConstIterator_inc(
    Imf_Header_ConstIterator_t * this_
    , Imf_Header_ConstIterator_t * * return_);
unsigned int Imf_3_0__Header__ConstIterator_name(
    Imf_Header_ConstIterator_t const * this_
    , char const * * return_);
unsigned int Imf_3_0__Header__ConstIterator_attribute(
    Imf_Header_ConstIterator_t const * this_
    , Imf_Attribute_t const * * return_);
unsigned int Imf_3_0__Header__ConstIterator_copy(
    Imf_Header_ConstIterator_t * this_
    , Imf_Header_ConstIterator_t const * rhs);
unsigned int Imf_3_0__Header__ConstIterator_move(
    Imf_Header_ConstIterator_t * this_
    , Imf_Header_ConstIterator_t * rhs);