openexr-sys/src/imf_header.rs


pub fn Imf_3_0__Header_begin_const(this_: *const Imf_Header_t, return_: *mut Imf_Header_ConstIterator_t) -> Exception;

pub fn Imf_3_0__Header_end(this_: *mut Imf_Header_t, return_: *mut Imf_Header_Iterator_t) -> Exception;

pub fn Imf_3_0__Header_end_const(this_: *const Imf_Header_t, return_: *mut Imf_Header_ConstIterator_t) -> Exception;

pub fn Imf_3_0__Header_find(this_: *mut Imf_Header_t, return_: *mut Imf_Header_Iterator_t, name: *const c_char) -> Exception;

pub fn Imf_3_0__Header_find_const(this_: *const Imf_Header_t, return_: *mut Imf_Header_ConstIterator_t, name: *const c_char) -> Exception;

pub fn Imf_3_0__Header_displayWindow(this_: *mut Imf_Header_t, return_: *mut *mut Imath_Box2i_t) -> Exception;

pub fn Imf_3_0__Header_displayWindow_const(this_: *const Imf_Header_t, return_: *mut *const Imath_Box2i_t) -> Exception;

pub fn Imf_3_0__Header_dataWindow(this_: *mut Imf_Header_t, return_: *mut *mut Imath_Box2i_t) -> Exception;

pub fn Imf_3_0__Header_dataWindow_const(this_: *const Imf_Header_t, return_: *mut *const Imath_Box2i_t) -> Exception;

pub fn Imf_3_0__Header_pixelAspectRatio(this_: *mut Imf_Header_t, return_: *mut *mut c_float) -> Exception;

pub fn Imf_3_0__Header_pixelAspectRatio_const(this_: *const Imf_Header_t, return_: *mut *const c_float) -> Exception;

pub fn Imf_3_0__Header_screenWindowCenter(this_: *mut Imf_Header_t, return_: *mut *mut Imath_V2f_t) -> Exception;

pub fn Imf_3_0__Header_screenWindowCenter_const(this_: *const Imf_Header_t, return_: *mut *const Imath_V2f_t) -> Exception;

pub fn Imf_3_0__Header_screenWindowWidth(this_: *mut Imf_Header_t, return_: *mut *mut c_float) -> Exception;

pub fn Imf_3_0__Header_screenWindowWidth_const(this_: *const Imf_Header_t, return_: *mut *const c_float) -> Exception;

pub fn Imf_3_0__Header_channels(this_: *mut Imf_Header_t, return_: *mut *mut Imf_ChannelList_t) -> Exception;

pub fn Imf_3_0__Header_channels_const(this_: *const Imf_Header_t, return_: *mut *const Imf_ChannelList_t) -> Exception;

pub fn Imf_3_0__Header_lineOrder(this_: *mut Imf_Header_t, return_: *mut *mut Imf_LineOrder) -> Exception;

pub fn Imf_3_0__Header_lineOrder_const(this_: *const Imf_Header_t, return_: *mut *const Imf_LineOrder) -> Exception;

pub fn Imf_3_0__Header_compression(this_: *mut Imf_Header_t, return_: *mut *mut Imf_Compression) -> Exception;

pub fn Imf_3_0__Header_compression_const(this_: *const Imf_Header_t, return_: *mut *const Imf_Compression) -> Exception;

pub fn Imf_3_0__Header_setName(this_: *mut Imf_Header_t, name: *const std_string_t) -> Exception;

pub fn Imf_3_0__Header_name(this_: *mut Imf_Header_t, return_: *mut *mut std_string_t) -> Exception;

pub fn Imf_3_0__Header_name_const(this_: *const Imf_Header_t, return_: *mut *const std_string_t) -> Exception;

pub fn Imf_3_0__Header_hasName(this_: *const Imf_Header_t, return_: *mut bool) -> Exception;

pub fn Imf_3_0__Header_setType(this_: *mut Imf_Header_t, type_: *const std_string_t) -> Exception;

pub fn Imf_3_0__Header_type(this_: *mut Imf_Header_t, return_: *mut *mut std_string_t) -> Exception;

pub fn Imf_3_0__Header_type_const(this_: *const Imf_Header_t, return_: *mut *const std_string_t) -> Exception;

pub fn Imf_3_0__Header_hasType(this_: *const Imf_Header_t, return_: *mut bool) -> Exception;

pub fn Imf_3_0__Header_setVersion(this_: *mut Imf_Header_t, version: c_int) -> Exception;

pub fn Imf_3_0__Header_version(this_: *mut Imf_Header_t, return_: *mut *mut c_int) -> Exception;

pub fn Imf_3_0__Header_version_const(this_: *const Imf_Header_t, return_: *mut *const c_int) -> Exception;

pub fn Imf_3_0__Header_hasVersion(this_: *const Imf_Header_t, return_: *mut bool) -> Exception;

pub fn Imf_3_0__Header_setChunkCount(this_: *mut Imf_Header_t, chunks: c_int) -> Exception;

pub fn Imf_3_0__Header_hasChunkCount(this_: *const Imf_Header_t, return_: *mut bool) -> Exception;

pub fn Imf_3_0__Header_chunkCount_const(this_: *const Imf_Header_t, return_: *mut *const c_int) -> Exception;

pub fn Imf_3_0__Header_setView(this_: *mut Imf_Header_t, view: *const std_string_t) -> Exception;

pub fn Imf_3_0__Header_hasView(this_: *const Imf_Header_t, return_: *mut bool) -> Exception;

pub fn Imf_3_0__Header_view(this_: *mut Imf_Header_t, return_: *mut *mut std_string_t) -> Exception;

pub fn Imf_3_0__Header_view_const(this_: *const Imf_Header_t, return_: *mut *const std_string_t) -> Exception;

pub fn Imf_3_0__Header_setTileDescription(this_: *mut Imf_Header_t, td: *const Imf_TileDescription_t) -> Exception;

pub fn Imf_3_0__Header_tileDescription(this_: *mut Imf_Header_t, return_: *mut *mut Imf_TileDescription_t) -> Exception;

pub fn Imf_3_0__Header_tileDescription_const(this_: *const Imf_Header_t, return_: *mut *const Imf_TileDescription_t) -> Exception;

pub fn Imf_3_0__Header_hasTileDescription(this_: *const Imf_Header_t, return_: *mut bool) -> Exception;

pub fn Imf_3_0__Header_setPreviewImage(this_: *mut Imf_Header_t, p: *const Imf_PreviewImage_t) -> Exception;

pub fn Imf_3_0__Header_previewImage(this_: *mut Imf_Header_t, return_: *mut *mut Imf_PreviewImage_t) -> Exception;

pub fn Imf_3_0__Header_previewImage_const(this_: *const Imf_Header_t, return_: *mut *const Imf_PreviewImage_t) -> Exception;

pub fn Imf_3_0__Header_hasPreviewImage(this_: *const Imf_Header_t, return_: *mut bool) -> Exception;

pub fn Imf_3_0__Header_sanityCheck(this_: *const Imf_Header_t, is_tiled: bool, is_multipart_file: bool) -> Exception;

pub fn Imf_3_0__Header_setMaxImageSize(max_width: c_int, max_height: c_int) -> Exception;

pub fn Imf_3_0__Header_setMaxTileSize(max_width: c_int, max_height: c_int) -> Exception;

pub fn Imf_3_0__Header_readsNothing(this_: *mut Imf_Header_t, return_: *mut bool) -> Exception;

pub fn Imf_3_0__Header_writeTo(this_: *const Imf_Header_t, return_: *mut u64, os: *mut Imf_OStream_t, is_tiled: bool) -> Exception;

pub fn Imf_3_0__Header_readFrom(this_: *mut Imf_Header_t, is: *mut Imf_IStream_t, version: *mut c_int) -> Exception;

pub fn Imf_3_0__Header__Iterator_sizeof() -> usize;

pub fn Imf_3_0__Header__Iterator_alignof() -> usize;

pub fn Imf_3_0__Header__Iterator_ctor(this_: *mut Imf_Header_Iterator_t) -> Exception;

pub fn Imf_3_0__Header__Iterator_inc(this_: *mut Imf_Header_Iterator_t, return_: *mut *mut Imf_Header_Iterator_t) -> Exception;

pub fn Imf_3_0__Header__Iterator_name(this_: *const Imf_Header_Iterator_t, return_: *mut *const c_char) -> Exception;

pub fn Imf_3_0__Header__Iterator_attribute(this_: *const Imf_Header_Iterator_t, return_: *mut *mut Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__Header__Iterator_copy(this_: *mut Imf_Header_Iterator_t, rhs: *const Imf_Header_Iterator_t) -> Exception;

pub fn Imf_3_0__Header__Iterator_move(this_: *mut Imf_Header_Iterator_t, rhs: *mut Imf_Header_Iterator_t) -> Exception;

pub fn Imf_3_0__Header__ConstIterator_sizeof() -> usize;

pub fn Imf_3_0__Header__ConstIterator_alignof() -> usize;

pub fn Imf_3_0__Header__ConstIterator_ctor(this_: *mut Imf_Header_ConstIterator_t) -> Exception;

pub fn Imf_3_0__Header__ConstIterator_from_mut(this_: *mut Imf_Header_ConstIterator_t, rhs: *const Imf_Header_Iterator_t) -> Exception;

pub fn Imf_3_0__Header__ConstIterator_inc(this_: *mut Imf_Header_ConstIterator_t, return_: *mut *mut Imf_Header_ConstIterator_t) -> Exception;

pub fn Imf_3_0__Header__ConstIterator_name(this_: *const Imf_Header_ConstIterator_t, return_: *mut *const c_char) -> Exception;

pub fn Imf_3_0__Header__ConstIterator_attribute(this_: *const Imf_Header_ConstIterator_t, return_: *mut *const Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__Header__ConstIterator_copy(this_: *mut Imf_Header_ConstIterator_t, rhs: *const Imf_Header_ConstIterator_t) -> Exception;

pub fn Imf_3_0__Header__ConstIterator_move(this_: *mut Imf_Header_ConstIterator_t, rhs: *mut Imf_Header_ConstIterator_t) -> Exception;


} // extern "C"
